--- a/app/views/server/stats/security.html
+++ b/app/views/server/stats/security.html
@@ -4,10 +4,35 @@
       <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
     </div>
   </div>
+
   <div ng-show="agentActive">
     <div class="row">
       <div class="col-md-12">
-        <tabset >
+        <div class="panel panel-default">
+          <div class="panel-heading">Security Global Settings</div>
+          <div class="panel-body">
+            <form class="form-inline">
+              <div class="form-group">
+                <label>Server </label>
+                <select id="serverOnline" ng-model="server" class="form-control " ng-options="s.name for s in servers"
+                        data-placeholder="Pick a Server"></select>
+              </div>
+              <div class="form-group">
+                <label>Enabled </label>
+                <input type="checkbox" ng-model="security.enabled">
+              </div>
+              <div class="form-group">
+                <label>Debug </label>
+                <input type="checkbox" ng-model="security.debug">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <tabset>
           <tab title="{{t.name}}" icon="icon" ng-repeat="t in securityTabs"
                template-url="{{t.template}}"></tab>
         </tabset>
