--- a/app/views/server/stats/backup.html
+++ b/app/views/server/stats/backup.html
@@ -1,7 +1,9 @@
 <div class="row" ng-controller="BackupConfigController">
   <div ng-show="!agentActive">
     <div class="col-md-12 studio-well-tips">
-      <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
+      <h4 ng-bind-html=" 'agent.notFound' | translate:links ">
+
+      </h4>
     </div>
   </div>
   <div ng-show="agentActive">
